PCL interpreter - improve mode 9 decompression

Bug 694990 " mode 9 uncompress simply does not work correctly."

Adopting Hin-Tak's patch from this bug. The output is not completely
correct but it is much improved. I need this commit to help with
following commits.